finished all styling and almost finished media queries

--- a/blog.html
+++ b/blog.html
@@ -66,15 +66,24 @@
 <!-- Comments Section -->
         <section class="comments">
             <h5>Comments:</h5>
-            <div>
-                <img src="./Boat-Ride-Adventures-final-assets/comment-1.jpg" alt="Photo of a man smiling">
-                <p class="commentsDate">Tuesday October 9th, 2019 by Ali</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, libero blanditiis deleniti ut, eum commodi, illo sed excepturi sapiente rerum minus earum ad fugit minima alias a asperiores dolor deserunt!</p>
+            <div class="man">
+                <div class="manImgContainer">
+                    <img src="./Boat-Ride-Adventures-final-assets/comment-1.jpg" alt="Photo of a man smiling">
+                   
+                </div>
+                <div class="manTextContainer">
+                    <p class="commentsDate">Tuesday October 9th, 2019 by Ali</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque, libero blanditiis deleniti ut, eum commodi, illo sed excepturi sapiente rerum minus earum ad fugit minima alias a asperiores dolor deserunt!</p>
+                </div>
             </div>
-            <div>
-                <img src="./Boat-Ride-Adventures-final-assets/comment-2.jpg" alt="Photo of a woman laughing">
-                <p class="commentsDate">Wednesday October 10th, 2019 by Lisa</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate saepe similique, amet distinctio dolorum expedita blanditiis laudantium earum molestiae tempora aut recusandae quis ullam fuga nam ipsam voluptates, placeat vel.</p>
+            <div class="woman">
+                <div class="womanImgContainer">
+                    <img src="./Boat-Ride-Adventures-final-assets/comment-2.jpg" alt="Photo of a woman laughing">
+                </div>
+                <div class="womanTextContainer">
+                    <p class="commentsDate">Wednesday October 10th, 2019 by Lisa</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate saepe similique, amet distinctio dolorum expedita blanditiis laudantium earum molestiae tempora.</p>
+                </div>
             </div>
         </section>
 
