--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                 </div>
             <div class="contact">
             <div class="contactInfo">
-                <p>info@email.com</p>
+                <p class="infoEmail">info@email.com</p>
                 <p>123 - 456 - 7890 
                 <br>123 Queen Street West, Unit 10
                 <br>Toronto, Ontario
