--- a/index.html
+++ b/index.html
@@ -42,26 +42,34 @@
         <section class="blogPosts">
             <div class="wrapper">
                 <ul class="blogGallery">
-                    <li class="blogOne">
-                        <i class="fa-solid fa-location-dot"></i>
-                        <h2>New Destinations</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus sit sequi, animi vel enim voluptatum maiores
+                    <li>
+                        <div class="blogIcons">
+                            <i class="fa-solid fa-location-dot"></i>
+                            <h2>New Destinations</h2>
+                        </div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus sit sequi, animi vel enim voluptatum maiores
                         quaerat?</p>
                     </li>
-                    <li class="blogTwo">
-                        <i class="fa-solid fa-users"></i>
-                        <h2>Community</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio quibusdam quae voluptas, repellat odio consequatur deleniti praesentium provident qui enim eaque fugiat voluptatum repellendus in fugit sed sint maiores placeat?</p>
+                    <li>
+                        <div class="blogIcons">
+                            <i class="fa-solid fa-users"></i>
+                            <h2>Community</h2>
+                        </div>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio quibusdam quae voluptas, repellat odio consequatur deleniti praesentium provident qui enim eaque fugiat voluptatum repellendus in fugit sed sint maiores placeat?</p>
                     </li>
-                    <li class="blogThree">
-                        <i class="fa-solid fa-file"></i>
-                        <h2>Blog</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio quibusdam quae voluptas, repellat odio consequatur deleniti praesentium provident qui enim eaque fugiat voluptatum repellendus in fugit sed sint maiores placeat?</p>
+                    <li>
+                        <div class="blogIcons">
+                            <i class="fa-solid fa-file"></i>
+                            <h2>Blog</h2>
+                        </div>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio quibusdam quae voluptas, repellat odio consequatur deleniti praesentium provident qui enim eaque fugiat voluptatum repellendus in fugit sed sint maiores placeat?</p>
                     </li>
-                    <li class="blogFour">
-                        <i class="fa-solid fa-phone-flip"></i>
-                        <h2>Get in touch</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio quibusdam quae voluptas, repellat odio consequatur deleniti praesentium provident qui enim eaque fugiat voluptatum repellendus in fugit sed sint maiores placeat?</p>
+                    <li>
+                        <div class="blogIcons">
+                            <i class="fa-solid fa-phone-flip"></i>
+                            <h2>Get in touch</h2>
+                        </div>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio quibusdam quae voluptas, repellat odio consequatur deleniti praesentium provident qui enim eaque fugiat voluptatum repellendus in fugit sed sint maiores placeat?</p>
                     </li>
                 </ul>
             </div>
