--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav>
             <ul class="mainMenu">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#blog">About</a></li>
                 <li><a href="./blog.html">Blog</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
@@ -39,7 +39,7 @@
         </div>
 
 <!-- Blogs -->
-        <section class="blogPosts">
+        <section id="blog" class="blogPosts">
             <div class="wrapper">
                 <ul class="blogGallery">
                     <li>
