--- a/blog.html
+++ b/blog.html
@@ -88,22 +88,35 @@
         </section>
 
 <!-- Form Section -->
-        <form action="" class="blogForm">
+        <form id="blogForm" action="" class="blogForm">
             <div class="nameEmail">
             <label for="name"></label>
-            <input type="text" placeholder="Name" class="name" id="name" name="name">
+            <input type="text" placeholder="Name" class="name" id="name" name="name" required>
             <label for="email"></label>
-            <input type="email" placeholder="Email address" class="email" id="email" name="email">
+            <input type="email" placeholder="Email address" class="email" id="email" name="email" required>
             </div>
             <label for="comment"></label>
-            <textarea name="comment" placeholder="Comment" id="comment" cols="30" rows="10"></textarea>
-            <button class="blogButton" type="submit">Post Comment</button>        
+            <textarea name="comment" placeholder="Comment" id="comment" cols="30" rows="10" required></textarea>
+            <button class="blogButton" type="submit" onClick='return confirmSubmit()'>Post Comment</button>        
         </form>
 </main>
 
     <footer>
         <p>Copyright &copy; 2019 HackerYou</p>
     </footer>
-    
+
+<script>
+    function confirmSubmit() {
+        const agree=confirm("Are you sure you would like to submit?");
+        if (agree)
+        return true;
+        else
+        return false;
+    }
+
+
+
+</script>
+
 </body>
 </html>
