--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         </nav>
         <h1>Boat Ride 
         <br>Adventures</h1>
-        <i class="fa-solid fa-bars"></i>
+        <button class="navToggle">
+            <i class="fa-solid fa-bars"></i>
+        </button>
     </header>
 
 <!-- Main Section -->
