added javascript to blog and contact sections, alert box when form is submitted

--- a/blog.html
+++ b/blog.html
@@ -106,14 +106,14 @@
     </footer>
 
 <script>
-    function confirmSubmit() {
+
+    function confirmSubmit() {;
         const agree=confirm("Are you sure you would like to submit?");
         if (agree)
-        return true;
+        return true
         else
         return false;
-    }
-
+    };
 
 
 </script>
